// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should render correctly 1`] = `
.c2 {
  display: block;
  padding-bottom: 0.25rem;
  color: #5e5e5e;
  font-size: 0.875rem;
  line-height: 1;
}

.c0 {
  position: absolute;
  opacity: 0;
}

.c0 + .c1 {
  position: relative;
  padding: 0;
  color: #444444;
  cursor: pointer;
}

.c0 + .c1::before {
  content: '';
  display: inline-block;
  width: 16px;
  height: 16px;
  margin-right: 0.25rem;
  border: 0.0625rem solid;
  border-radius: 999px;
  background: white;
  vertical-align: text-bottom;
  border-color: #423b63;
}

.c0 + .c1::after {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
}

.c0:focus + .c1::before {
  box-shadow: 0 0 0 0.1rem rgba(66,59,99,0.2);
}

.c0:disabled + .c1 {
  opacity: 0.5;
  cursor: auto;
  pointer-events: none;
}

.c0:disabled + .c1::before {
  opacity: 0.5;
}

.c0:checked + .c1::after {
  background-color: #423b63;
}

<div>
  <Radio
    bg="primary"
    borderColor="primary"
    disabled={false}
    id="radio"
  >
    <input
      className="c0"
      disabled={false}
      id="radio"
      type="radio"
    />
  </Radio>
  <Label
    htmlFor="radio"
  >
    <label
      className="c1 c2"
      htmlFor="radio"
    >
      Radio
    </label>
  </Label>
</div>
`;

exports[`Radio should render with props disabled 1`] = `
.c2 {
  display: block;
  padding-bottom: 0.25rem;
  color: #5e5e5e;
  font-size: 0.875rem;
  line-height: 1;
}

.c0 {
  position: absolute;
  opacity: 0;
}

.c0 + .c1 {
  position: relative;
  padding: 0;
  color: #444444;
  cursor: pointer;
}

.c0 + .c1::before {
  content: '';
  display: inline-block;
  width: 16px;
  height: 16px;
  margin-right: 0.25rem;
  border: 0.0625rem solid;
  border-radius: 999px;
  background: white;
  vertical-align: text-bottom;
  border-color: #423b63;
}

.c0 + .c1::after {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
}

.c0:focus + .c1::before {
  box-shadow: 0 0 0 0.1rem rgba(66,59,99,0.2);
}

.c0:disabled + .c1 {
  opacity: 0.5;
  cursor: auto;
  pointer-events: none;
}

.c0:disabled + .c1::before {
  opacity: 0.5;
}

.c0:checked + .c1::after {
  background-color: #423b63;
}

<div>
  <Radio
    bg="primary"
    borderColor="primary"
    disabled={true}
    id="radio"
  >
    <input
      className="c0"
      disabled={true}
      id="radio"
      type="radio"
    />
  </Radio>
  <Label
    htmlFor="radio"
  >
    <label
      className="c1 c2"
      htmlFor="radio"
    >
      Radio
    </label>
  </Label>
</div>
`;
